# Plant_Monitor

./: README.md
PlantMonitorNode/Zephyr/PlantMonitor/: CMakeLists.txt  prj.conf
PlantMonitorNode/Zephyr/PlantMonitor/boards/: nucleo_f303re.overlay
PlantMonitorNode/Zephyr/PlantMonitor/src/: DataTypes.h  main.c
PlantMonitorNode/Zephyr/PlantMonitor/src/Sensors/: BMP280.c  BMP280.h  DHT11.c  DHT11.h  DS18B20.c  DS18B20.h
